projects/compiler/test/typechecker/bindingdecl/error_uninitialized_val_with_annotation.out
Error at %FILE_NAME%:1:5
Missing initializer for immutable variable 'a'
  |  val a: Int
         ^
